--- a/jenkins-server/Dockerfile
+++ b/jenkins-server/Dockerfile
@@ -1,11 +1,15 @@
 FROM jenkins/jenkins:lts
 USER root
+
 RUN apt-get update && \
     apt-get install -y docker.io unzip jq ansible maven awscli curl && \
     curl -Lo /usr/local/bin/terraform.zip https://releases.hashicorp.com/terraform/1.5.7/terraform_1.5.7_linux_amd64.zip && \
     unzip /usr/local/bin/terraform.zip -d /usr/local/bin && \
-    curl -Lo /usr/local/bin/kubectl https://dl.k8s.io/release/$(curl -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl && \
+    rm /usr/local/bin/terraform.zip && \
+    K8S_VERSION=$(curl -s https://dl.k8s.io/release/stable.txt) && \
+    curl -Lo /usr/local/bin/kubectl https://dl.k8s.io/release/${K8S_VERSION}/bin/linux/amd64/kubectl && \
     chmod +x /usr/local/bin/kubectl && \
     rm -rf /var/lib/apt/lists/*
+
 COPY plugins.yaml /usr/share/jenkins/ref/plugins.yaml
 RUN jenkins-plugin-cli --plugins-file /usr/share/jenkins/ref/plugins.yaml
