--- a/jenkins-server/Dockerfile
+++ b/jenkins-server/Dockerfile
@@ -4,6 +4,7 @@ USER root
 RUN apt-get update && \
     apt-get install -y docker.io unzip jq ansible maven awscli curl && \
     curl -Lo /usr/local/bin/terraform.zip https://releases.hashicorp.com/terraform/1.5.7/terraform_1.5.7_linux_amd64.zip && \
+    chmod +x /usr/local/bin/terraform && \
     unzip /usr/local/bin/terraform.zip -d /usr/local/bin && \
     rm /usr/local/bin/terraform.zip && \
     curl -Lo /usr/local/bin/kubectl https://dl.k8s.io/release/v1.30.0/bin/linux/amd64/kubectl && \
